--- a/src/js/components/cpu/CPU.css
+++ b/src/js/components/cpu/CPU.css
@@ -2,7 +2,15 @@ cpu {
 	display: block;
 	position: absolute;
 	width: 558px;
-	height: 126px;
+	height: 116px;
+	padding: 5px;
+
+	border: 2px solid rgba(0,0,0,0);
+	border-radius: 15px;
+}
+
+cpu.hasturn {
+	border: 2px solid cyan;
 }
 
 cpu#left {
